WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110447
REGRESSION(
r143470
): editing/spelling/spelling-changed-text.html fails on Qt, GTK, EFL
https://bugs.webkit.org/show_bug.cgi?id=110447
Summary
REGRESSION(r143470): editing/spelling/spelling-changed-text.html fails on Qt,...
Zoltan Arvai
Reported
2013-02-21 02:29:42 PST
After
r143470
editing/spelling/spelling-changed-text.html fails on Qt, GTK, EFL. --- /ramdisk/qt-linux-release/build/layout-test-results/editing/spelling/spelling-changed-text-expected.txt +++ /ramdisk/qt-linux-release/build/layout-test-results/editing/spelling/spelling-changed-text-actual.txt @@ -3,8 +3,8 @@ On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -PASS window.getSelection().toString() is " Is it broken?" +FAIL Spellcheck timed out PASS successfullyParsed is true TEST COMPLETE - +Spell cheher. Is it broken?
Attachments
Patch
(3.88 KB, patch)
2013-02-21 12:40 PST
,
Rouslan Solomakhin
no flags
Details
Formatted Diff
Diff
Patch
(15.61 KB, patch)
2013-02-21 15:16 PST
,
Rouslan Solomakhin
no flags
Details
Formatted Diff
Diff
Patch
(8.22 KB, patch)
2013-02-21 16:13 PST
,
Rouslan Solomakhin
no flags
Details
Formatted Diff
Diff
Patch
(2.75 KB, patch)
2013-02-22 11:32 PST
,
Rouslan Solomakhin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2013-02-21 12:03:15 PST
We should probably skip this test on Qt, GTK, EFL.
Rouslan Solomakhin
Comment 2
2013-02-21 12:16:53 PST
Working on a patch.
Rouslan Solomakhin
Comment 3
2013-02-21 12:17:33 PST
Are other platforms ok?
Rouslan Solomakhin
Comment 4
2013-02-21 12:40:36 PST
Created
attachment 189577
[details]
Patch
Tony Chang
Comment 5
2013-02-21 13:11:03 PST
Comment on
attachment 189577
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=189577&action=review
> LayoutTests/platform/efl/TestExpectations:1865 > +# Need to add "cheher" misspelling to tests. > +
webkit.org/b/110503
editing/spelling/spelling-changed-text.html [ Skip ]
Looks like we should use Failure since it's not timing out on EFL:
http://build.webkit.org/builders/EFL%20Linux%2064-bit%20Release%20WK2/builds/5137/steps/layout-test/logs/stdio
The benefit of Failure is you can see the diff on the waterfall:
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20WK2%20(Tests)/r143631%20(4487)/editing/spelling/spelling-changed-text-pretty-diff.html
Looks like there's some testRunner method that isn't implemented.
> LayoutTests/platform/gtk/TestExpectations:1446 > +# Need to add "cheher" misspelling to tests. > +
webkit.org/b/110501
editing/spelling/spelling-changed-text.html [ Skip ]
This one also looks like Failure:
http://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release%20WK2%20%28Tests%29/builds/4487/steps/layout-test/logs/stdio
Tony Chang
Comment 6
2013-02-21 13:11:43 PST
(In reply to
comment #3
)
> Are other platforms ok?
You can see the bots here:
http://build.webkit.org/
. Find me on IRC if you want some help on how to find the specific links I linked to.
Rouslan Solomakhin
Comment 7
2013-02-21 15:16:54 PST
Created
attachment 189612
[details]
Patch
Tony Chang
Comment 8
2013-02-21 15:40:27 PST
Comment on
attachment 189612
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=189612&action=review
The change to editing/spelling/spelling-changed-text.html looks good.
> LayoutTests/platform/efl/TestExpectations:1824 > -
webkit.org/b/108370
editing/spelling/spelling-with-underscore-selection.html [ Skip ] > -
webkit.org/b/108370
editing/spelling/spelling-with-whitespace-selection.html [ Skip ] > +
webkit.org/b/108370
editing/spelling/spelling-double-clicked-word.html [ Failure ] > +
webkit.org/b/108370
editing/spelling/spelling-double-clicked-word-with-underscores.html [ Failure ] > +
webkit.org/b/108370
editing/spelling/spelling-exactly-selected-multiple-words.html [ Failure ]
I would make the Skip -> Failure change in a separate patch. My only worry is that some of these tests are timing out rather than failing, and in that case, we probably don't want to run the test.
Rouslan Solomakhin
Comment 9
2013-02-21 16:13:08 PST
Created
attachment 189629
[details]
Patch
Rouslan Solomakhin
Comment 10
2013-02-21 16:13:58 PST
Comment on
attachment 189629
[details]
Patch Separated the change from [ Skip ] to [ Failure ] into a different patch for landing later.
WebKit Review Bot
Comment 11
2013-02-21 16:58:04 PST
Comment on
attachment 189629
[details]
Patch Clearing flags on attachment: 189629 Committed
r143668
: <
http://trac.webkit.org/changeset/143668
>
WebKit Review Bot
Comment 12
2013-02-21 16:58:09 PST
All reviewed patches have been landed. Closing bug.
Zoltan Arvai
Comment 13
2013-02-22 01:07:34 PST
On Qt and GTK have this error now: --- /ramdisk/qt-linux-release/build/layout-test-results/editing/spelling/spelling-changed-text-expected.txt +++ /ramdisk/qt-linux-release/build/layout-test-results/editing/spelling/spelling-changed-text-actual.txt @@ -3,8 +3,8 @@ On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -PASS window.getSelection().toString() is " Is it broken?" +FAIL Spellcheck timed out PASS successfullyParsed is true TEST COMPLETE - +Spell wellcome. Is it broken?
Zoltan Arvai
Comment 14
2013-02-22 05:33:56 PST
Skipped on Qt in
http://trac.webkit.org/changeset/143716
. Probably we should reopen this bug, but for some reason i can't.
Zoltan Arvai
Comment 15
2013-02-22 05:51:33 PST
Changing to resolved -> unconfirmed -> new to reopen.
Rouslan Solomakhin
Comment 16
2013-02-22 08:05:56 PST
(In reply to
comment #13
)
> On Qt and GTK have this error now: > > --- /ramdisk/qt-linux-release/build/layout-test-results/editing/spelling/spelling-changed-text-expected.txt > +++ /ramdisk/qt-linux-release/build/layout-test-results/editing/spelling/spelling-changed-text-actual.txt > @@ -3,8 +3,8 @@ > On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". > > > -PASS window.getSelection().toString() is " Is it broken?" > +FAIL Spellcheck timed out > PASS successfullyParsed is true > > TEST COMPLETE > - > +Spell wellcome. Is it broken?
Timeout happens because Qt and GTK do not mark "wellcome" as misspelled. Which word will Qt and GTK mark as misspelled?
Rouslan Solomakhin
Comment 17
2013-02-22 08:06:44 PST
How come Qt and GTK EWS is green for the patch?
Rouslan Solomakhin
Comment 18
2013-02-22 08:36:14 PST
Browsing through Tools/DumpRenderTree/qt and Tools/DumpRenderTree/gtk, it seems that Qt and Gtk will not mark any words misspelled. I am marking editing/spelling/spelling-changed-text.html as [ Failure ]. Sounds good?
Zoltan Arvai
Comment 19
2013-02-22 08:51:29 PST
Sounds ok for me on Qt.
Rouslan Solomakhin
Comment 20
2013-02-22 09:47:37 PST
<rouslan> mrobinson: qt folks want to disable my test on their platforms. should i do the same on gtk? <mrobinson> rouslan: Were you thinking of using a different word? If you like I can test it locally to ensure that it passes. <rouslan> mrobinson: that would be lovely! here's a list of a few words: "foo", "baz", "chello", "zz" mrobinson: i am reading from Tools/DumpRenderTree/chromium/TestRunner/src/MockSpellCheck.cpp basically <mrobinson> rouslan: I'll compile ToT and run the test locally. It might take 30 minutes or so. <rouslan> mrobinson: thank you! please take your time
Rouslan Solomakhin
Comment 21
2013-02-22 11:28:42 PST
<mrobinson> rouslan: I'm fine with skipping it for now, but it worries me that the test seems to fail so readily on other platforms
Rouslan Solomakhin
Comment 22
2013-02-22 11:32:34 PST
Created
attachment 189799
[details]
Patch
Rouslan Solomakhin
Comment 23
2013-02-22 11:34:41 PST
Comment on
attachment 189799
[details]
Patch This patch disables editing/spelling/spelling-changed-text.html on Qt and GTK platforms. Note that bug
http://webkit.org/b/108370
is for making sure that the same tests can pass on all platforms.
WebKit Review Bot
Comment 24
2013-02-22 13:28:11 PST
Comment on
attachment 189799
[details]
Patch Rejecting
attachment 189799
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=gce-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 189799, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Full output:
http://queues.webkit.org/results/16709249
Rouslan Solomakhin
Comment 25
2013-02-22 13:32:42 PST
Commit queue denied because of failure to run "update-webkit". Was the git server down?
WebKit Review Bot
Comment 26
2013-02-22 13:52:34 PST
Comment on
attachment 189799
[details]
Patch Clearing flags on attachment: 189799 Committed
r143788
: <
http://trac.webkit.org/changeset/143788
>
WebKit Review Bot
Comment 27
2013-02-22 13:52:40 PST
All reviewed patches have been landed. Closing bug.
Roger Fong
Comment 28
2013-03-01 17:04:24 PST
This test also fails on AppleWin port. skipped:
r144516
Rouslan Solomakhin
Comment 29
2013-03-01 17:27:32 PST
(In reply to
comment #28
)
> This test also fails on AppleWin port. > skipped:
r144516
Roger: Should we open a different ticket to expect this test to fail on AppleWin?
Roger Fong
Comment 30
2013-03-01 17:35:09 PST
(In reply to
comment #29
)
> (In reply to
comment #28
) > > This test also fails on AppleWin port. > > skipped:
r144516
> > Roger: Should we open a different ticket to expect this test to fail on AppleWin?
Don't really know the history of this bug but the results are: -PASS window.getSelection().toString() is " Is it broken?" +FAIL Spellcheck timed out PASS successfullyParsed is true TEST COMPLETE - +Spell cheher. Is it broken? Was the fix to implement something in the test runner? If all the other ports are now fixed then I guess we should file a separate bug. If all the ports also skipped this test then I think we should just add AppleWin to the title of this bug.
Rouslan Solomakhin
Comment 31
2013-03-02 09:33:51 PST
(In reply to
comment #30
)
> +Spell cheher. Is it broken?
This should have changed to "Spell wellcome. Is it broken?" Spellcheck times out when "cheher" is not marked as a misspelling, because some test runners do not mark it as a misspelling. All test runners should mark the word "wellcome" as a misspelling. I think. Qt and Gtk layout tests still expect this test to fail, however, because the test uses some features that are not implemented in Qt and Gtk test runners yet. For example, the test uses asynchronous spellcheck.
Grzegorz Czajkowski
Comment 32
2013-03-19 01:19:40 PDT
Unskipped for EFL at
http://trac.webkit.org/changeset/146189
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug