Tools: [Chromium] Remove the word "cheher" from the list of misspelled words https://bugs.webkit.org/show_bug.cgi?id=110447

Patch by Rouslan Solomakhin <rouslan@chromium.org> on 2013-02-21
Reviewed by Tony Chang.

Other platforms do not mark "cheher" as a misspelled word in layout tests.
This change is to bring Chromium platform in line with the rest of the
platforms.

* DumpRenderTree/chromium/TestRunner/src/MockSpellCheck.cpp:
(WebTestRunner::MockSpellCheck::hasInCache): Changed "cheher" to "wellcome".
(WebTestRunner::MockSpellCheck::fillSuggestionList): Removed "cheher" misspelling and "checker" suggestion.
(WebTestRunner::MockSpellCheck::initializeIfNeeded): Removed "cheher" misspelling.

LayoutTests: Fix editing/spelling/spelling-changed-text.html on Qt and GTK
https://bugs.webkit.org/show_bug.cgi?id=110447

Patch by Rouslan Solomakhin <rouslan@chromium.org> on 2013-02-21
Reviewed by Tony Chang.

After r143470 editing/spelling/spelling-changed-text.html fails on Qt and GTK,
because Qt and Gtk spelling tests do not mark "cheher" as a misspelling. This
patch changes the test to use the misspelling "wellcome" instead.

* editing/spelling/spelling-changed-text-expected.txt: Changed "cheher" to "wellcome".
* editing/spelling/spelling-changed-text.html: Changed "cheher" to "wellcome".
* platform/gtk/TestExpectations: Enabled editing/spelling/spelling-changed-text.html test.
* platform/qt/TestExpectations: Enabled editing/spelling/spelling-changed-text.html test.

Canonical link: https://commits.webkit.org/128810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143668 268f45cc-cd09-0410-ab3c-d52691b4dbfc